--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -173,7 +173,7 @@
       small building blocks of arbitrary complex data analysis workflows.
 \item In order to facilitate workflow construction, OpenMS was integrated into KNIME~\cite{KNIME}, the Konstanz
 			Information Miner, an open-source integration platform providing a powerful and flexible workflow system
-			combined with advanced data analytics, visualisation, and report capabilities. Raw MS data as well as the
+			combined with advanced data analytics, visualization, and report capabilities. Raw MS data as well as the
 			results of data processing using TOPP can be visualized using TOPPView~\cite{Sturm2009}.
 \item In this hands-on tutorial session, you will become familiar with some of the basic functionalities of OpenMS/TOPP, TOPPView, and KNIME
       and learn how to use a selection of TOPP tools used in the tutorial workflows.
