--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -23,7 +23,7 @@ OpenMS provides a convenient viewer for some of the data: \OPENMSTOOL{TOPPView}.
 
 \begin{figure}
 \includegraphics[width=\textwidth]{graphics/introduction/TOPPView.png}
-\caption{TOPPView the graphical application for viewing mass spectra and analysis results. Top window shows a small region of a peak map. In this 2D representation of the measured spectra, signals of eluting peptides are colored according to the raw peak intensities. The lower windows displays an extracted spectrum (=scan) from the peak map. On the right side, the list of spectra can be browsed.}
+\caption{TOPPView, the graphical application for viewing mass spectra and analysis results. Top window shows a small region of a peak map. In this 2D representation of the measured spectra, signals of eluting peptides are colored according to the raw peak intensities. The lower windows displays an extracted spectrum (=scan) from the peak map. On the right side, the list of spectra can be browsed.}
 \label{fig:toppview}
 \end{figure}
 
@@ -36,7 +36,7 @@ We will make use of these later throughout the tutorial. Let's start with a firs
       and select
       \directory{ OpenMS / small / velos005614.mzML}
       . This file contains a reduced LC-MS map (only a selected RT and m/z range
-      was extracted using the TOPP tool FileFilter) of a label-free measurement of the human platelet proteome recorded on an Orbitrap velos.
+      was extracted using the TOPP tool \OPENMSTOOL{FileFilter}) of a label-free measurement of the human platelet proteome recorded on an Orbitrap velos.
       The other two mzML files contain technical replicates of this experiment.
       First, we want to obtain a global view on the whole LC-MS map - the default option \textit{Map view 2D} is the correct one and we can click the ok button. 
 \item Play around.
@@ -134,8 +134,8 @@ You are now ready to install the OpenMS nodes.
   %\item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
 
 % Use this part if you base the tutorial on the last stable release (recommended)
-  \item From the \menu{Work with:} drop down list select the \menu{http://tech.knime.org/update/community-contributions/trusted/2.12}
-\item Select the \textbf{OpenMS} nodes in the category "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
+  \item From the \menu{Work with:} drop down list select the \\ \menu{http://tech.knime.org/update/community-contributions/trusted/2.12}
+\item Select the \textbf{OpenMS} nodes in the category: \\ "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
 \item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available under “Community Nodes”.
 \end{enumerate}
 
@@ -149,7 +149,7 @@ You are now ready to install the OpenMS nodes.
 
 \subsubsection{KNIME Concepts}
 
-A \textbf{workflow} is a sequence of computational steps applied to a single or multiple input data sets to process and analyse the data.
+A \textbf{workflow} is a sequence of computational steps applied to a single or multiple input data sets to process and analyze the data.
 In KNIME such workflows are implemented graphically by combining so-called \textbf{nodes}.
 A node represents a single analysis step in a workflow.
 Nodes have input and output \textbf{ports} where the data enters the node or the results are provided for other nodes after processing, respectively.
@@ -185,11 +185,11 @@ If the node execution failed the node will switch to the red state.
 
 Most nodes will be configured as soon as all input ports are connected.
 For some nodes additional parameters have to be provided that cannot be either guessed from the data or filled with sensible defaults.
-In this case, of if you want to customise the default configuration, you can open the configuration dialog of a node with a double-click on the node.
+In this case, of if you want to customize the default configuration, you can open the configuration dialog of a node with a double-click on the node.
 For OpenMS you will see a configuration dialog like the one shown in \cref{fig:knime_configure}.
 \note{OpenMS distinguishes between normal parameters and advanced parameters.
-Advanced parameters are by default hidden from the users since they should only rarely be customised.
-In case you want to have a look at the parameters or need to customise them in one of the tutorials you can show them by clicking on the checkbox  \menu{Show advanced parameter} in the lower part of the dialog.}
+Advanced parameters are by default hidden from the users since they should only rarely be customized.
+In case you want to have a look at the parameters or need to customize them in one of the tutorials you can show them by clicking on the checkbox  \menu{Show advanced parameter} in the lower part of the dialog.}
 The dialog shows the individual parameters, their current value and type, and, in the lower part of the dialog, the documentation for the currently selected parameter.
 
 \begin{figure}
@@ -249,8 +249,8 @@ Workflows can easily be created by a right click in the Workflow Explorer follow
 \subsubsection{Sharing workflows}
 \label{sec:sharing_workflows}
 
-To be able to share a workflow with others KNIME supports the import and export of complete workflows.
-To export a workflow select it in the Workflow Explorer and select \menu{File > Export KNIME Workflow...}.
+To be able to share a workflow with others, KNIME supports the import and export of complete workflows.
+To export a workflow, select it in the Workflow Explorer and select \menu{File > Export KNIME Workflow...}.
 KNIME will export workflows as a zip file containing all the information on nodes, their connections, and their configuration.
 Those zip files can again be imported by selecting \menu{File > Import KNIME Workflow...}.
 
@@ -332,7 +332,7 @@ And close the dialog with \menu{Ok}.
 \item
 We now add two more nodes: the \KNIMENODE{ZipLoopStart} and the \KNIMENODE{ZipLoopEnd} node from the category \menu{Community Nodes > GenericKnimeNodes > Flow}. 
 \item
-Afterwards we connect the \KNIMENODE{Input Files} node to the first port of the \KNIMENODE{ZipLoopStart} node, the first port of the \KNIMENODE{ZipLoopStart} node to the \KNIMENODE{FileInfo} node, the first output port of the \KNIMENODE{FileInfo} node to the first input port of the \KNIMENODE{ZipLoopEnd} node, and the first output port of the \KNIMENODE{ZipLoopEnd} node to the \KNIMENODE{Output Folder} node (, not \KNIMENODE{Output File}).
+Afterwards we connect the \KNIMENODE{Input Files} node to the first port of the \KNIMENODE{ZipLoopStart} node, the first port of the \KNIMENODE{ZipLoopStart} node to the \KNIMENODE{FileInfo} node, the first output port of the \KNIMENODE{FileInfo} node to the first input port of the \KNIMENODE{ZipLoopEnd} node, and the first output port of the \KNIMENODE{ZipLoopEnd} node to the \KNIMENODE{Output Folder} node (NOT to the \KNIMENODE{Output File}).
 The complete workflow is shown in \cref{fig:knime_minimal_loop}
 \item
 The workflow is already complete.
@@ -360,39 +360,38 @@ The \KNIMENODE{ZipLoopEnd} collects the single files that arrive at its input po
 
 Workflows can get rather complex and may contain dozens or even hundreds of nodes. KNIME provides a simple way to improve handling and clarity of large workflows:
 
-\paragraph{MetaNodes} allow to bundle several nodes into a single MetaNode.
+\paragraph{MetaNodes} allow to bundle several nodes into a single \KNIMENODE{Meta Node}.
 
 \begin{task}
-Select multiple nodes (e.g. all nodes of the ZipLoop including the start and end node). Open the context menu (right-click) and select \menu{Collapse into Meta Node}. Enter a caption for the Meta Node. The previously selected nodes are now contained in the \KNIMENODE{Meta Node}. Double clicking on the \KNIMENODE{Meta Node} will display the contained nodes in a new tab window. 
+Select multiple nodes (e.g. all nodes of the ZipLoop including the start and end node). Open the context menu (right-click) and select \menu{Collapse into Meta Node}. Enter a caption for the \KNIMENODE{Meta Node}. The previously selected nodes are now contained in the \KNIMENODE{Meta Node}. Double clicking on the \KNIMENODE{Meta Node} will display the contained nodes in a new tab window. 
 \end{task}
 
 \begin{task}
 Undo the packaging. First select the \KNIMENODE{Meta Node}, open the context menu (right-click) and select \menu{Expand Meta Node}.
 \end{task}
 
-KNIME provides a large number of nodes for a wide range of statistical analysis, machine learning, data processing and visualization. Still, more recent statistical analysis methods, specialized visualizations or cutting edge algorithms may not be covered in KNIME. In order to expand its capabilities over the readily available nodes external scripting languages can be integrated. In this tutorial we primarily use scripts of the powerful statistical compute language R. Note that this part is considered advanced and might be difficult to follow if you are not familiar to R. In this case you might skip this part.
+KNIME provides a large number of nodes for a wide range of statistical analysis, machine learning, data processing and visualization. Still, more recent statistical analysis methods, specialized visualizations or cutting edge algorithms may not be covered in KNIME. In order to expand its capabilities over the readily available nodes external scripting languages can be integrated. In this tutorial, we primarily use scripts of the powerful statistical computing language R. Note that this part is considered advanced and might be difficult to follow if you are not familiar with R. In this case you might skip this part.
 
-\paragraph{R View (Table)} allow to seamlessly include R scripts into KNIME. We will demonstrate on a minimal example how such a script is integrated.
+\paragraph{R View (Table)} allows to seamlessly include R scripts into KNIME. We will demonstrate on a minimal example how such a script is integrated.
 
 \begin{task}
 First we need some example data in KNIME, which we will generate using the \KNIMENODE{Data Generator} node. You can keep the default settings and execute the node. The table contains 4 columns, each containing random coordinates and one column containing a cluster number (Cluster\_0 to Cluster\_3). Now place a \KNIMENODE{R View (Table)} node into the workflow and connect the upper output port of the \KNIMENODE{Data Generator} node to the input of the \KNIMENODE{R View (Table)} node.
 Right-click and configure the node.
 
-If you get an error message like: Execute failed: R\_HOME does not contain a folder with name 'bin'. Please change the R settings in the preferences. To do so: open \menu{File > Preferences > KNIME > R} and enter the path to your R installation (the folder that contains the bin directory).
+If you get an error message like: Execute failed: R\_HOME does not contain a folder with name 'bin'. Please change the R settings in the preferences. To do so open \menu{File > Preferences > KNIME > R} and enter the path to your R installation (the folder that contains the bin directory).
 
 If R is correctly recognized we can start writing an R script. Consider that we are interested in plotting the first and second coordinates and color them according to their cluster number. In R this can be done in a single line.
 
-In the \textit{R View (Table)} text editor, enter the following code:
+In the \KNIMENODE{R View (Table)} text editor, enter the following code:
 \begin{lstlisting}
 plot(x=knime.in$Universe_0_0, y=knime.in$Universe_0_1, main="Plotting column Universe_0_0 vs. Universe_0_1", col=knime.in$"Cluster Membership")
 \end{lstlisting}
         
 Explanation:
-
-The table provided as input to the \KNIMENODE{R View (Table) node} is available as R \texttt{data.frame} with name \texttt{knime.in}. Columns (also listed on the left side of the R View window) can be accessed in the usual R way by first specifying the data.frame name and then the column name (e.g. knime.in\$Universe\_0\_0).
-\texttt{plot} is the plotting function we use to generate the image. We tell it to use the data in column knime.in\$Universe\_0\_0 as x-coordinate and the column knime.in\$Universe\_0\_1 as y coordinate in the plot. \texttt{main} is simply the plot name and col the column that is used to determine the color (in this case it is the Cluster Membership column).
+The table provided as input to the \KNIMENODE{R View (Table)} node is available as R \texttt{data.frame} with name \texttt{knime.in}. Columns (also listed on the left side of the R View window) can be accessed in the usual R way by first specifying the \texttt{data.frame} name and then the column name (e.g. \texttt{knime.in\$Universe\_0\_0)}.
+\texttt{plot} is the plotting function we use to generate the image. We tell it to use the data in column \texttt{knime.in\$Universe\_0\_0} as x-coordinate and the column \texttt{knime.in\$Universe\_0\_1} as y coordinate in the plot. \texttt{main} is simply the plot name and col the column that is used to determine the color (in this case it is the \texttt{Cluster Membership} column).
 
 Now press the \menu{Eval script} and \menu{Show plot} buttons.
 \end{task}
 
-\note{Note that we needed to put some extra quotes around Cluster Membership. If we omit those, R would interpret the column name only up to the first space (knime.in\$Cluster) which is not present in the table and leads to an error. Quotes are regularly needed if column names contain spaces or tabs.}
+\note{Note that we needed to put some extra quotes around \texttt{Cluster Membership}. If we omit those, R would interpret the column name only up to the first space (\texttt{knime.in\$Cluster}) which is not present in the table and leads to an error. Quotes are regularly needed if column names contain spaces or tabs.}
