Added RDKit to needed packages

--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -113,6 +113,7 @@ First, we install some additional extensions that are required by our OpenMS nod
     \item KNIME SVG Support
     \item KNIME XLS Support
     \item KNIME XML-Processing
+	\item RDKit KNIME integration
     \end{itemize}
 \item And the following plugin from the \textit{Marvin Chemistry Extensions (donated by Infocom \& Chemaxon)} category
     \begin{itemize}
