Included (now correct)instructions for RDKit in KNIME

--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -101,7 +101,7 @@ Before we can start with the tutorial we need to install all the required extens
 First, we install some additional extensions that are required by our OpenMS nodes or used in the Tutorials e.g. for visualization.
 \begin{enumerate}
 \item Click on \menu{Help > Install New Software...}
-\item From the \menu{Work with:} drop down list select the \menu{http://update.knime.org/analytics-platform/2.12}
+\item From the \menu{Work with:} drop down list select \menu{http://update.knime.org/analytics-platform/2.12}
 \item Now select the following plugins from the \textit{KNIME \& Extensions} category
     \begin{itemize}
     \item KNIME Base Chemistry Types \& Nodes
@@ -113,12 +113,16 @@ First, we install some additional extensions that are required by our OpenMS nod
     \item KNIME SVG Support
     \item KNIME XLS Support
     \item KNIME XML-Processing
-	\item RDKit KNIME integration
     \end{itemize}
 \item And the following plugin from the \textit{Marvin Chemistry Extensions (donated by Infocom \& Chemaxon)} category
     \begin{itemize}
     \item ChemAxon/Infocom Marvin Extensions Feature
     \end{itemize}
+\item From the \menu{Work with:} drop down list select \\\menu{http://tech.knime.org/update/community-contributions/trusted/2.12}
+\item Now select the following plugin from the \textit{KNIME Community Contributions - Cheminformatics} category 	
+    \begin{itemize}
+    \item     RDKit KNIME integration
+    \end{itemize}	
 \item Follow the instructions and after a restart of KNIME the dependencies will be installed.
 \end{enumerate}
 
