--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -46,7 +46,7 @@ We will make use of these later throughout the tutorial. Let's start with a firs
         \begin{itemize}
         \item Is activated by default (though each loaded spectra file is displayed zoomed out first, so you do not need to scroll).
         \item Allows you to browse your data by moving around in RT and m/z range.
-        \item When zommed in, to scroll the spectra map, click-drag on the current view.
+        \item When zoomed in, to scroll the spectra map, click-drag on the current view.
         \item Arrow keys can be used to scroll the view as well.
         \end{itemize}
     \item Zoom mode
@@ -114,10 +114,10 @@ First, we install some additional extensions that are required by our OpenMS nod
     \item KNIME XLS Support
     \item KNIME XML-Processing
     \end{itemize}
-\item And the following plugin from the \textit{Marvin Chemistry Extensions (donated by Infocom \& Chemaxon)} category
-    \begin{itemize}
-    \item ChemAxon/Infocom Marvin Extensions Feature
-    \end{itemize}
+%\item And the following plugin from the \textit{Marvin Chemistry Extensions (donated by Infocom \& Chemaxon)} category
+%    \begin{itemize}
+%    \item ChemAxon/Infocom Marvin Extensions Feature
+%    \end{itemize}
 \item From the \menu{Work with:} drop down list select \\\menu{http://tech.knime.org/update/community-contributions/trusted/2.12}
 \item Now select the following plugin from the \textit{KNIME Community Contributions - Cheminformatics} category 	
     \begin{itemize}
@@ -152,7 +152,7 @@ You are now ready to install the OpenMS nodes.
  %Please note that some of the workflows shown here require OpenMS X.X and therefore will not work with OpenMS Y.Y downloaded from the stable update site.
  %}
 
-\subsubsection{KNIME Concepts}
+\subsubsection{KNIME concepts}
 
 A \textbf{workflow} is a sequence of computational steps applied to a single or multiple input data sets to process and analyze the data.
 In KNIME such workflows are implemented graphically by combining so-called \textbf{nodes}.
