--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -222,7 +222,7 @@ After we linked features across all maps, we want to identify features that are 
 \end{itemize}
 
 
-\subsubsection{Interactive Visualization}
+\subsubsection{Interactive visualization}
 
 KNIME supports multiple nodes for interactive visualization with interrelated output. The nodes used in this part of the workflow exemplify this concept. They further demonstrate how 
 figures with data dependent customization can be easily realized using basic KNIME nodes. Several simple operations are concatenated in order to enable an interactive volcano plot.
@@ -236,7 +236,7 @@ figures with data dependent customization can be easily realized using basic KNI
 Inspect the nodes of this section. Customize your visualization and possibly try to visualize other aspects of your data.
 \end{task}
 
-\subsubsection{Advanced Visualization}
+\subsubsection{Advanced visualization}
 Even though the basic capabilities for (interactive) plots in KNIME are valuable for initial data exploration, professional looking depiction of analysis results often relies on dedicated plotting libraries. The statistics language R supports the addition of a large variety of packages, including packages providing extensive plotting capabilities. This part of the workflow shows how to use R nodes in KNIME to visualize more advanced figures. Specifically, we make use of different plotting packages to realize heatmaps and a PCA plot.
 \begin{itemize}
 \item The used \KNIMENODE{RView (Table)} nodes combine the possibility to write R snippet code with visualization capabilities inside KNIME. Resulting images can be looked at in the output RView, or saved via the \KNIMENODE{Image Port Writer} node.
